Kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1

  selector:
    matchLabels:
      app: web-server

  template:
    metadata:
      labels:
        app: web-server

    spec:
      volumes:
        - name: shared-storage
          emptyDir: {}

      containers:
        - name: web-server
          image: python:3.9-alpine
          command: ['python', '-m', 'http.server', '8000', '--directory', '/homework']

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: shared-storage
              mountPath: /homework

          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          lifecycle:
            preStop:
              exec:
                command: ["rm", "-f", "/homework/index.html"]
