Kubernetes-networks/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      nodeSelector:
        role: workload
      containers:
        - name: web-server
          image: nginx:latest
