Kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework

spec:
  type: ClusterIP

  selector:
    app: web-server

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
